Fixing missing border.

--- a/ieeetags/media/scss/style-newui.scss
+++ b/ieeetags/media/scss/style-newui.scss
@@ -1448,6 +1448,7 @@ input.disabled:focus {
   
 #login-tab {
    padding-top: 23px;
+   border-bottom: 1px solid $primaryColor;
 }
   
 table#login-table th{
